// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusChip component render correct a valid component is passed 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#fff",
      "borderColor": "#C4C6CC",
      "borderRadius": 25,
      "borderWidth": 2,
      "flexDirection": "row",
      "height": 50,
      "paddingLeft": 25,
      "paddingRight": 25,
    }
  }
>
  <Text
    style={
      Array [
        undefined,
        Object {
          "color": "#000000",
          "fontSize": 29,
          "fontWeight": "400",
          "lineHeight": 18,
        },
      ]
    }
  >
    Custom component
  </Text>
</View>
`;

exports[`StatusChip component render correct if a background is passed 1`] = `
<View
  background="#2979FF"
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#2979FF",
      "borderColor": "#2979FF",
      "borderRadius": 25,
      "borderWidth": 2,
      "flexDirection": "row",
      "height": 50,
      "paddingLeft": 25,
      "paddingRight": 25,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#fff",
          "fontFamily": "Roboto",
          "fontSize": 27,
          "fontWeight": "900",
          "lineHeight": 37.5,
          "textAlign": "center",
        },
        Object {
          "color": "#000000",
          "fontSize": 29,
          "fontWeight": "400",
          "lineHeight": 18,
        },
      ]
    }
  >
    Delivered
  </Text>
</View>
`;

exports[`StatusChip component render correct text is passed 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#fff",
      "borderColor": "#C4C6CC",
      "borderRadius": 25,
      "borderWidth": 2,
      "flexDirection": "row",
      "height": 50,
      "paddingLeft": 25,
      "paddingRight": 25,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#2979FF",
          "fontFamily": "Roboto",
          "fontSize": 27,
          "fontWeight": "900",
          "lineHeight": 37.5,
          "textAlign": "center",
        },
        Object {
          "color": "#000000",
          "fontSize": 29,
          "fontWeight": "400",
          "lineHeight": 18,
        },
      ]
    }
  >
    Partially delivered
  </Text>
</View>
`;
